; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_vfs.c_mac_vnode_check_setacl.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_vfs.c_mac_vnode_check_setacl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnode = type { i32 }
%struct.kauth_acl = type { i32 }

@vnode_check_setacl = common dso_local global i32 0, align 4
@mac_vnode_enforce = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_vnode_check_setacl(i32 %0, %struct.vnode* %1, %struct.kauth_acl* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.vnode*, align 8
  %7 = alloca %struct.kauth_acl*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store %struct.vnode* %1, %struct.vnode** %6, align 8
  store %struct.kauth_acl* %2, %struct.kauth_acl** %7, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @vfs_context_ucred(i32 %10)
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @mac_cred_check_enforce(i32 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %26

16:                                               ; preds = %3
  %17 = load i32, i32* @vnode_check_setacl, align 4
  %18 = load i32, i32* %8, align 4
  %19 = load %struct.vnode*, %struct.vnode** %6, align 8
  %20 = load %struct.vnode*, %struct.vnode** %6, align 8
  %21 = getelementptr inbounds %struct.vnode, %struct.vnode* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.kauth_acl*, %struct.kauth_acl** %7, align 8
  %24 = call i32 @MAC_CHECK(i32 %17, i32 %18, %struct.vnode* %19, i32 %22, %struct.kauth_acl* %23)
  %25 = load i32, i32* %9, align 4
  store i32 %25, i32* %4, align 4
  br label %26

26:                                               ; preds = %16, %15
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i32 @vfs_context_ucred(i32) #1

declare dso_local i32 @mac_cred_check_enforce(i32) #1

declare dso_local i32 @MAC_CHECK(i32, i32, %struct.vnode*, i32, %struct.kauth_acl*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
